FIX | HeroSection component styles on tablet

--- a/components/HeroSection/style.module.scss
+++ b/components/HeroSection/style.module.scss
@@ -7,6 +7,7 @@
 
   @include media(">tablet") {
     padding-top: 189px;
+    min-height: 600px;
   }
 
   &::before {
